--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@drawable/logoimg"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SuccessActivity"></activity>
+        <activity android:name=".PayDetail"></activity>
+        <activity android:name=".SuccessActivity" />
         <activity android:name=".PopUpActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
