--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,23 +36,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.6.1'
-    implementation 'com.xwray:groupie:2.1.0'
-    implementation 'com.xwray:groupie-kotlin-android-extensions:2.0.3'
-
-    apply plugin: 'com.google.gms.google-services'
-    apply plugin: 'kotlin-kapt'
-
-    kotlin {
-        experimental {
-            coroutines "enable"
-        }
-    }
-
-    androidExtensions {
-        experimental = true
-    }
-
+    implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 repositories {
