--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,13 @@
         android:allowBackup="true"
         android:icon="@drawable/logoimg"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/logoimg"
+        android:roundIcon="@drawable/logoimgopaque"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".PopUpActivity"></activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
