--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
 
+androidExtensions {
+    experimental = true
+}
 android {
     compileSdkVersion 28
     defaultConfig {
