--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'com.google.gms.google-services'
 androidExtensions {
     experimental = true
 }
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -29,11 +30,10 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.google.firebase:firebase-auth:19.1.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
