--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.gopariapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -7,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logoimg"
+        android:icon="@drawable/logoimgopaque"
         android:label="@string/app_name"
         android:roundIcon="@drawable/logoimgopaque"
         android:supportsRtl="true"
